c2rust-transpile/tests/snapshots/snapshots__transpile@multiple_blocks.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/multiple_blocks.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn multiple_blocks(
    mut a: ::core::ffi::c_int,
    mut b: ::core::ffi::c_int,
    mut c: ::core::ffi::c_int,
    mut d: ::core::ffi::c_int,
    mut e: ::core::ffi::c_int,
    mut f: ::core::ffi::c_int,
) {
    enum C2Rust_Block {
        L1,
        L2,
    }
    let mut c2rust_current_block: C2Rust_Block;
    enum C2Rust_Block2 {
        M1,
        M2,
    }
    let mut c2rust_current_block2: C2Rust_Block2;
    if a != 0 {
        c2rust_current_block = C2Rust_Block::L1;
    } else {
        c2rust_current_block = C2Rust_Block::L2;
    }
    loop {
        match c2rust_current_block {
            C2Rust_Block::L1 => {
                if b != 0 {
                    c2rust_current_block = C2Rust_Block::L2;
                } else {
                    break;
                }
            }
            C2Rust_Block::L2 => {
                if c != 0 {
                    c2rust_current_block = C2Rust_Block::L1;
                } else {
                    break;
                }
            }
        }
    }
    if d != 0 {
        c2rust_current_block2 = C2Rust_Block2::M1;
    } else {
        c2rust_current_block2 = C2Rust_Block2::M2;
    }
    loop {
        match c2rust_current_block2 {
            C2Rust_Block2::M1 => {
                if e != 0 {
                    c2rust_current_block2 = C2Rust_Block2::M2;
                } else {
                    break;
                }
            }
            C2Rust_Block2::M2 => {
                if f != 0 {
                    c2rust_current_block2 = C2Rust_Block2::M1;
                } else {
                    break;
                }
            }
        }
    }
}
